<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <EditText
        android:id="@+id/tekstUpit"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/dRun"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tekstUpit"
        android:layout_centerHorizontal="true"
        android:text="@string/dRun" />

        <Spinner
            android:id="@+id/sRezultat"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dRun"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginTop="24dp" />

    <Spinner
        android:id="@+id/sKategorije"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/sRezultat"
        android:layout_alignStart="@+id/sRezultat"
        android:layout_below="@+id/sRezultat"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sKategorije"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_marginBottom="11dp"
            android:text="@string/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sKategorije"
            android:layout_marginTop="14dp"
            android:layout_toLeftOf="@+id/sKategorije"
            android:layout_toStartOf="@+id/sKategorije"
            android:text="@string/textView6" />

        <Button
            android:id="@+id/dAdd"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/sKategorije"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/dAdd" />


        <Button
            android:id="@+id/dPovratak"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:text="@string/dPovratak" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>