<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="294dp"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/eNaslovna"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="34dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/eNaziv"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@+id/eNaslovna"
            android:layout_toRightOf="@+id/eNaslovna"
            android:text="TextView"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/eAutor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/eNaziv"
            android:layout_toEndOf="@+id/eNaslovna"
            android:layout_toRightOf="@+id/eNaslovna"
            android:text="TextView"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eNaslovna"
            android:layout_alignStart="@+id/eNaslovna"
            android:layout_below="@+id/eAutor"
            android:layout_marginTop="14dp"
            android:text="@string/textView10" />

        <TextView
            android:id="@+id/eDatumObjavljivanja"
            android:layout_width="230dp"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/textView10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/eDatumObjavljivanja"
            android:text="@string/textView11" />

        <TextView
            android:id="@+id/eBrojStranica"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/eDatumObjavljivanja"
            android:layout_alignStart="@+id/eDatumObjavljivanja"
            android:layout_below="@+id/eDatumObjavljivanja"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_below="@+id/eBrojStranica"
            android:text="@string/textView12" />

        <TextView
            android:id="@+id/eOpis"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/eBrojStranica"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/eBrojStranica"
            android:layout_below="@+id/textView11"
            android:text="TextView"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="230dp" />

        <Button
            android:id="@+id/dPreporuci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eOpis"
            android:layout_centerHorizontal="true"
            android:text="@string/dPreporuci"
            android:focusable="false"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>