<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edina.spirala17933.DodavanjeKnjigeAkt">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="485dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="13dp">


        <ImageView
            android:id="@+id/naslovnaStr"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/imeAutora"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nazivKnjige"
            android:layout_alignStart="@+id/nazivKnjige"
            android:layout_below="@+id/nazivKnjige" />


        <EditText
            android:id="@+id/nazivKnjige"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/dNadjiSliku"
            android:layout_alignRight="@+id/dNadjiSliku"
            android:layout_below="@+id/dNadjiSliku"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/imeAutora"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:text="Ime autora:"
            android:id="@+id/textView2" />
        <Button
            android:id="@+id/dNadjiSliku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/naslovnaStr"
            android:layout_alignStart="@+id/naslovnaStr"
            android:layout_below="@+id/naslovnaStr"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="14dp"
            android:text="@string/dNadjiSliku" />

        <Button
            android:id="@+id/dUpisiKnjigu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imeAutora"
            android:layout_alignEnd="@+id/dPonisti"
            android:layout_alignRight="@+id/dPonisti"
            android:text="@string/dUpisiKnjigu" />

        <Spinner
            android:id="@+id/sKategorijaKnjige"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imeAutora"
            android:layout_alignStart="@+id/imeAutora"
            android:layout_below="@+id/imeAutora"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/dPonisti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/dPonisti" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/nazivKnjige"
            android:layout_alignBottom="@+id/nazivKnjige"
            android:layout_toLeftOf="@+id/nazivKnjige"
            android:layout_toStartOf="@+id/nazivKnjige"
            android:text="Naziv knjige:" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignTop="@+id/sKategorijaKnjige"
            android:text="Kategorija:" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
