<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <Spinner
                android:id="@+id/sKontakti"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="18dp" />

            <Button
                android:id="@+id/dPosalji"
                android:layout_width="140dp"
                android:layout_height="wrap_content"

                android:layout_alignBottom="@+id/sKontakti"
                android:layout_toEndOf="@+id/sKontakti"
                android:layout_toRightOf="@+id/sKontakti"
                android:text="@string/dPosalji" />


            <ImageView
                android:id="@+id/eNaslovna"
                android:layout_width="140dp"
                android:layout_height="170dp"

                android:layout_below="@+id/dPosalji"
                android:layout_marginTop="26dp"
                android:layout_toEndOf="@+id/sKontakti"
                android:layout_toRightOf="@+id/sKontakti"
                app:srcCompat="@mipmap/ic_launcher" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignTop="@+id/eNaslovna"
                android:layout_marginTop="21dp"
                android:layout_toLeftOf="@+id/eNaslovna"
                android:layout_toStartOf="@+id/eNaslovna"
                android:focusable="true">



            </ScrollView>

            <TextView
                android:id="@+id/eNaziv"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_alignTop="@+id/scrollView2"
                android:layout_toLeftOf="@+id/eNaslovna"
                android:layout_toStartOf="@+id/eNaslovna"
                android:text="TextView"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/eAutor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/textView10"
                android:layout_alignEnd="@+id/scrollView2"
                android:layout_alignLeft="@+id/eNaziv"
                android:layout_alignRight="@+id/scrollView2"
                android:layout_alignStart="@+id/eNaziv"
                android:layout_marginBottom="15dp"
                android:text="TextView"
                android:textSize="17dp"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="225dp" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignLeft="@+id/eAutor"
                android:layout_alignStart="@+id/eAutor"
                android:layout_below="@+id/eNaslovna"
                android:layout_marginTop="14dp"
                android:text="@string/textView10"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/eDatumObjavljivanja"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/eNaslovna"
                android:layout_alignRight="@+id/eNaslovna"
                android:layout_alignTop="@+id/textView10"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView10"
                android:layout_alignStart="@+id/textView10"
                android:layout_below="@+id/eDatumObjavljivanja"
                android:text="@string/textView11"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/eBrojStranica"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/eOpis"
                android:layout_alignLeft="@+id/eOpis"
                android:layout_alignRight="@+id/eOpis"
                android:layout_alignStart="@+id/eOpis"
                android:layout_alignTop="@+id/textView11"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignStart="@+id/textView11"
                android:layout_below="@+id/eBrojStranica"
                android:text="@string/textView12" />

            <TextView
                android:id="@+id/eOpis"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/eDatumObjavljivanja"
                android:layout_alignStart="@+id/eDatumObjavljivanja"
                android:layout_below="@+id/eBrojStranica"
                android:text="TextView"
                android:textSize="15dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="80dp" />


        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>